--- a/demo/demolist/Demo1.scss
+++ b/demo/demolist/Demo1.scss
@@ -13,7 +13,7 @@
         top: 200px;
         right: 300px;
         li{
-            padding: 0 10px;
+            padding: 0 10px 0 12px;
             line-height: 30px;
             height: 30px;
             background: #FFF;
@@ -23,6 +23,7 @@
         }
     }
     #my-awesome-nav li.active {
-        border-left: 2px solid #E14C46
+        border-left: 2px solid #E14C46;
+        padding: 0 10px;
     }
 }
